--- a/app/src/main/res/layout/activity_venue_options_display.xml
+++ b/app/src/main/res/layout/activity_venue_options_display.xml
@@ -4,10 +4,12 @@
     android:layout_height="match_parent">
 
     <ToggleButton
-        android:text="ToggleButton"
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/toggleButton6" />
+        android:id="@+id/venueButton1"
+        android:text="Whats going wrong"
+        />
 
     <ToggleButton
         android:text="ToggleButton"
