--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,11 +23,11 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
+        android:inputType="text"
         android:hint="Venue Option 1"
         android:ems="10"
         android:layout_below="@+id/textView"
-        android:id="@+id/editText1"
+        android:id="@+id/venueOption1"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
@@ -39,7 +39,7 @@
         android:inputType="textPersonName"
         android:hint="Venue Option 2"
         android:ems="10"
-        android:layout_below="@+id/editText1"
+        android:layout_below="@+id/venueOption1"
         android:id="@+id/editText2"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -91,7 +91,6 @@
         android:id="@+id/button"
         android:hint="Where to Eat?"
         android:elevation="10dp"
-        android:onClick="venueOptions"
         android:layout_marginTop="60dp"
         android:layout_below="@+id/editText5"
         android:layout_centerHorizontal="true" />
