--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,87 +11,87 @@
     tools:context="com.example.bootycall20.a5_3_1_dinner.MainActivity">
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Enter your Favorite Venues to Start 5-3-1"
-        android:id="@+id/textView"
-        android:textAppearance="@style/TextAppearance.AppCompat"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp" />
+        android:layout_marginTop="30dp"
+        android:text="Enter your Favorite Venues to Start 5-3-1"
+        android:textAppearance="@style/TextAppearance.AppCompat" />
 
     <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="text"
-        android:hint="Venue Option 1"
-        android:ems="10"
-        android:layout_below="@+id/textView"
         android:id="@+id/venueOption1"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:hint="Venue Option 2"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView"
         android:ems="10"
+        android:hint="Venue Option 1"
+        android:inputType="text" />
+
+    <EditText
+        android:id="@+id/venueOption2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/venueOption1"
-        android:id="@+id/editText2"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:ems="10"
+        android:hint="Venue Option 2"
+        android:inputType="text" />
 
     <EditText
+        android:id="@+id/venueOption3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/venueOption2"
+        android:ems="10"
         android:hint="Venue Option 3"
-        android:ems="10"
-        android:layout_below="@+id/editText2"
-        android:id="@+id/editText3"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:inputType="text" />
 
     <EditText
+        android:id="@+id/venueOption4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:hint="Venue Option 4"
-        android:ems="10"
-        android:layout_below="@+id/editText3"
-        android:id="@+id/editText4"
-        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:hint="Venue Option 5"
-        android:ems="10"
-        android:layout_below="@+id/editText4"
-        android:id="@+id/editText5"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
         android:layout_alignParentStart="true"
+        android:layout_below="@+id/venueOption3"
+        android:ems="10"
+        android:hint="Venue Option 4"
+        android:inputType="text" />
+
+    <EditText
+        android:id="@+id/venueOption5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/venueOption4"
+        android:ems="10"
+        android:hint="Venue Option 5"
+        android:inputType="text" />
 
     <Button
+        android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/button"
-        android:hint="Where to Eat?"
-        android:elevation="10dp"
+        android:layout_below="@+id/venueOption5"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="60dp"
-        android:layout_below="@+id/editText5"
-        android:layout_centerHorizontal="true" />
+        android:elevation="10dp"
+        android:hint="Where to Eat?" />
 </RelativeLayout>
