--- a/app/src/main/res/layout/activity_venue_options_display.xml
+++ b/app/src/main/res/layout/activity_venue_options_display.xml
@@ -1,44 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <ToggleButton
 
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/venueButton1"
-        android:text="Whats going wrong"
-        />
-
-    <ToggleButton
-        android:text="ToggleButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/toggleButton7" />
+        android:text="Whats going wrong" />
 
     <ToggleButton
-        android:text="ToggleButton"
+        android:id="@+id/venueButton2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/toggleButton8" />
+        android:text="ToggleButton" />
 
     <ToggleButton
-        android:text="ToggleButton"
+        android:id="@+id/venueButton3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/toggleButton9" />
+        android:text="ToggleButton" />
 
     <ToggleButton
-        android:text="ToggleButton"
+        android:id="@+id/venueButton4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/toggleButton10" />
+        android:text="ToggleButton" />
+
+    <ToggleButton
+        android:id="@+id/venueButton5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="ToggleButton" />
 
     <Button
-        android:hint="Update Venues"
+        android:id="@+id/button2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/button2"
-        android:onClick="venueOptions5"/>
+        android:hint="Update Venues"
+        android:onClick="venueOptions5" />
 </LinearLayout>
